feat: implement getting data about repositories

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="icon" href="assets/github-icon.svg">
+  <link rel="stylesheet" href="style.css">
+  <title>Request from GitHub</title>
 </head>
-<body>
-  
+<body class="body">
+  <main class="main">
+    <div class="autocomplete">
+      <input class="autocomplete-input" type="text">
+    </div>
+    <div class="wrapper-records"></div>
+  </main>
+    
 </body>
+  <script src="index.js"></script>
 </html>
