refactor: rename vars for better readability fix bugs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body class="body">
   <main class="main">
-    <div class="autocomplete">
+    <ul class="autocomplete">
       <input class="autocomplete-input" type="text">
-    </div>
+    </ul>
     <div class="wrapper-records"></div>
   </main>
     
