refactor: rename variables for better readability fix bugs

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body class="body">
   <main class="main">
     <ul class="autocomplete">
-      <input class="autocomplete-input" type="text">
+      <input class="autocomplete__input" type="text">
     </ul>
-    <div class="wrapper-records"></div>
+    <ul class="record-wrapper"></ul>
   </main>
     
 </body>
