--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body class="body">
   <main class="main">
-    <div class="autocomplete">
-      <input class="autocomplete-input" type="text">
-    </div>
-    <div class="wrapper-records"></div>
+    <ul class="autocomplete">
+      <input class="autocomplete__input" type="text">
+    </ul>
+    <ul class="record-wrapper"></ul>
   </main>
     
 </body>
